--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="words.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.min.js"></script>
     <script src="https://unpkg.com/ml5@0.6.0/dist/ml5.min.js"></script>
+    <script src="p5.sound.js"></script>
     <script src="game.js"></script>
 </head>
 <body>
